# Project-AI

./: .coverage  .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AI_PERSONA_FOUR_LAWS.md  AI_PERSONA_IMPLEMENTATION.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMMAND_MEMORY_FEATURES.md  COMPLETION_SUMMARY.md  CONSOLIDATION_PROPOSAL.md  CONTRIBUTING.md  DESKTOP_APP_QUICKSTART.md  DESKTOP_APP_README.md  DEVELOPER_QUICK_REFERENCE.md  Dockerfile  FINAL_SESSION_REPORT.md  FINAL_STATUS.md  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENT_AUDIT.md  INTEGRATION_GUIDE.md  INTEGRATION_GUIDE.py  LEARNING_REQUEST_IMPLEMENTATION.md  LEARNING_REQUEST_LOG.md  LEATHER_BOOK_ARCHITECTURE.md  LICENSE  MANIFEST.in  Makefile  NEW_FEATURES_SUMMARY.md  PERFORMANCE.md  PR Overseer.prompt.yml  PROGRAM_SUMMARY.md  Project-AI.code-workspace  README.md  SECURITY.md  (+17 more)
.githooks/: pre-commit
.github/: AUTOMATION.md  AUTOMATION_QUICKREF.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/scripts/: annotate_junit.py  test-automation.sh
.github/workflows/: Monolith  android.yml  auto-bandit-fixes.yml  auto-pr-handler.yml  auto-security-fixes.yml  bandit.yml  black-duck-security-scan-ci.yml  ci.yml  codacy-analysis.yml  codeql.yml  deploy.yml  fortify.yml  main.yml  (+1 more)
android/: README.md
data/: access_control.json  command_override_config.json  settings.json
docs/: LICENSING_GUIDE.md  LICENSING_SUMMARY.md  OFFLINE_FIRST_ARCHITECTURE.md  README.md  retrain.md
examples/: offline_integration_example.py  users.example.json
tests/: conftest.py  test_agents_pipeline.py  test_ai_systems.py  test_atomic_writes.py  test_backend_client.py  test_backend_client_extended.py  test_codex_integration.py  test_codex_staging_and_export.py  test_command_override_extended.py  test_command_override_migration.py  test_council_hub.py  test_council_hub_integration.py  test_coverage_boost.py  test_edge_cases_complete.py  test_error_paths.py  test_final_coverage_push.py  test_integration_pipeline_blocking.py  test_issue_1_ai_systems_265_266.py  test_issue_2_image_gen_269_270.py  test_learning_requests_extended.py  test_local_fbo.py  test_optical_flow.py  test_rag_system.py  test_user_manager.py  test_web_backend.py
tools/: check_large_files_for_lfs.py  fix_whitespace.py  import_test.py  install_dev_tools.sh  launch-dev-ui.bat  migrate_users.py  reflow_markdown.py  setup_designer_env.bat  setup_designer_env.ps1
web/: DEPLOYMENT.md  README.md  __init__.py
(+109 files in other folders)
